--- a/Anonymity/04 - 社科答集/维珍银河.md
+++ b/Anonymity/04 - 社科答集/维珍银河.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity 
 Last update: *27/06/2021* 
-Links:  [[股市]] [[两难]]
+Links:  [[低估值]] [[两难]]
 Tags:   
 
 说明市面上钱太多了，没处烧，于是故事太值钱了。
