--- a/Anonymity/05 - 科学答集/应用科学/折叠屏 - 前途.md
+++ b/Anonymity/05 - 科学答集/应用科学/折叠屏 - 前途.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity
 Last update: *23/07/2021* 
-Links:  [[视觉输入的极致]] [[折叠屏]] [[视觉艺术品]]
+Links:  [[极目]] [[折叠屏]] [[视觉艺术品]]
 Tags:   
 
  
