--- a/Anonymity/05 - 科学答集/应用科学/极目.md
+++ b/Anonymity/05 - 科学答集/应用科学/极目.md
@@ -1,8 +1,8 @@
-# 视觉输入的极致
-*折叠屏的极致会是什么呢?*
+# 极目
+[折叠屏的极致会是什么呢？](https://www.zhihu.com/question/314054264/answer/618582619)
 
 > Author: #Anonymity
-Last update: *23/07/2021* 
+Last update: *06/06/2022* 
 Links:  [[折叠屏]] [[折叠屏 - 前途]] [[视觉艺术品]]
 Tags:  
 
