--- a/Anonymity/06 - 未来科技/5G.md
+++ b/Anonymity/06 - 未来科技/5G.md
@@ -1,5 +1,5 @@
 # 5G
-*我用 5G 网络可以干什么?*
+[我用 5G 网络可以干什么？](https://www.zhihu.com/question/314766480/answer/708378659)
 
 > Author: #Anonymity
 Last update: *23/06/2021* 
@@ -7,11 +7,17 @@ Links [[5G - 速度]] [[5G - 蛋生鸡]] [[5G耗能]] [[5G - 热度]] [[5G - 远
 Tags:     
 
  
+作者：dg9qa  
+链接：https://www.zhihu.com/question/314766480/answer/708378659  
+来源：知乎  
+著作权归作者所有。商业转载请联系作者获得授权，非商业转载请注明出处。  
+  
+
 有人说有4G就可以了不需要5G，甚至言下之意连4G都不需要，这个说法其实站不住脚。
 
 这么说的主要依据不过是“3G/4G刚出来的时候飞快”，却完全不明白3G/4G的在初期体验的“快”是**以容量不达上限**为前提的。
 
-4G的频段天生限制了一个4G基站能承载的数据流上限，在承诺了单连接的带宽体验的前提下，基站只能连接特定数量的客户端。依靠忙闲差异，这个数字可以稍微腾挪一下，稍微高于总带宽上限和单连接承诺带宽的除数，但毕竟频段限制决定了这个上限是很低的。
+4G的频段天生限制了一个4G基站能承载的数据流上限，在承诺了单连接的带宽体验的前提下，基站只能连接特定数量的[客户端](https://www.zhihu.com/search?q=%E5%AE%A2%E6%88%B7%E7%AB%AF&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A708378659%7D)。依靠忙闲差异，这个数字可以稍微腾挪一下，稍微高于总带宽上限和单连接承诺带宽的除数，但毕竟频段限制决定了这个上限是很低的。
 
 4G基站的辐射范围要比5G基站大几倍，它的潜在连接需求就更大。考虑到它的总带宽又窄得多，这导致4G基站的负荷远比5G要大。
 
@@ -43,22 +49,26 @@ Tags:
 
 单站容量低，要快能怎么办？还是只有多建基站，在基站之间实现动态漫游分配。
 
-想要一直保持4G的速度不下降，保持单站连接数不对带宽形成压力，最终4G基站的数量和密度还是会向5G机基站的密度逼近——只是单纯的少掉了带宽而已。
+想要一直保持4G的速度不下降，保持单站[连接数](https://www.zhihu.com/search?q=%E8%BF%9E%E6%8E%A5%E6%95%B0&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A708378659%7D)不对带宽形成压力，最终4G基站的数量和密度还是会向5G机基站的密度逼近——只是单纯的少掉了带宽而已。
 
-> 这个系列会不定期更新。更新会在讨论区以回复所有人形式推送。回复即为订阅，请自己慎重。
-> 
-> 笔者脾气古怪，性情暴躁，会“随机”删除折叠拉黑，勿谓言之不预也。
-> 
-> 另外，回答问题要不要审题——问题问的是“5G能做什么”，不是“5G不能做什么”，认为5G什么都不能做，又为什么要来回答这个问题？让这个问题下答案寥寥不就充分说明了观点了？
-> 
-> 信息时代，带宽和流量就是货币。
-> 
-> 现在你一个月花10000块觉得非常满意，吃饱穿暖，没事坐那想——“再给我9万，让我一个月花10万，我都不知道还能买啥了”。
-> 
+  
+
+> 这个系列会不定期更新。更新会在讨论区以回复所有人形式推送。回复即为订阅，请自己慎重。  
+>   
+> 笔者脾气古怪，性情暴躁，会“随机”删除折叠拉黑，勿谓言之不预也。  
+>   
+> 另外，回答问题要不要审题——问题问的是“5G能做什么”，不是“5G不能做什么”，认为5G什么都不能做，又为什么要来回答这个问题？让这个问题下答案寥寥不就充分说明了观点了？  
+>   
+> 信息时代，带宽和流量就是货币。  
+>   
+> 现在你一个月花10000块觉得非常满意，吃饱穿暖，没事坐那想——“再给我9万，让我一个月花10万，我都不知道还能买啥了”。  
+>   
 > 等你花到一个月10万的时候你再回头看看。  
 > 你会深深的明白当初自己根本不知道自己在说什么。
 
-## [](https://github.com/itrewub/jh-notes/blob/main/titled/5g.md#chapter-15g%E5%B0%86%E6%B7%B1%E5%88%BB%E7%9A%84%E6%94%B9%E5%8F%98%E5%85%AC%E5%8F%B8%E5%BD%A2%E6%80%81%E5%92%8C%E5%8A%B3%E5%8A%A8%E5%85%B3%E7%B3%BB)Chapter 1——5G将深刻的改变公司形态和劳动关系。
+  
+
+## Chapter 1——5G将深刻的改变公司形态和劳动关系。
 
 好吧，太多人都如在梦中，只想着个人娱乐上的、民生服务上的影响。
 
@@ -91,6 +101,8 @@ Tags:
 最重要的是，这付出了“不能雇佣全国/本时区乃至全世界范围内最合适的人选”而带来的机会成本。世界各大中心城市都在面临这尴尬的局面——在本地可选的人才里面好用的早已没了性价比，新进人口毫无技能，却一开始就成本高昂。同样水平的薪酬对各二三线城市同样技能水准的对象吸引力很高，但是这部分人力资源却完全没有办法利用，这导致企业不得不放弃大量的业务。**这其中埋葬了大量的潜在职位和国际竞争力**。
 
 **北上广深，不但是一个极其昂贵的超级会议室，还是一个“人满为患的人力资源沙漠”。**
+
+  
 
 **当改变的成本低于不改变的成本，改变就会到来，这就是一切社会变革的动力学本质。**
 
@@ -128,7 +140,7 @@ Tags:
 
 来，你给找个光纤 + wifi6看看？
 
-光纤和Wi-Fi是远远不够的。因为现代商业实践的移动性非常强。企业中的决策层几乎很少有长期在一个固定地点待命的行为习惯。大量的企业业务涉及到前线作业人员，都是没有固定的理想的网络条件的。wifi和光纤局域网的设置千奇百怪，无法预料，这会给在线协同带来难以预料的风险。——当你清空了所有相关方的日程表却发现有一到两个关键人连接有问题，这种浪费是不可饶恕的。也常常造成严重的后果。
+光纤和Wi-Fi是远远不够的。因为现代商业实践的移动性非常强。企业中的决策层几乎很少有长期在一个固定地点待命的行为习惯。大量的企业业务涉及到前线作业人员，都是没有固定的理想的网络条件的。wifi和光纤局域网的设置千奇百怪，无法预料，这会给在线协同带来难以预料的风险。——当你清空了所有相关方的[日程表](https://www.zhihu.com/search?q=%E6%97%A5%E7%A8%8B%E8%A1%A8&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A708378659%7D)却发现有一到两个关键人连接有问题，这种浪费是不可饶恕的。也常常造成严重的后果。
 
 4G不能完善的解决这问题。恰恰是因为4G的辐射范围很广，在其辐射范围内出现人流拥塞的可能性反而难以预料。尤其是很多业务常常涉及高人口密度地区——譬如商场、车站、闹市区。4G的带宽争抢就成了一个严肃的不确定因素。只要有10%的几率发生问题，当需要较大范围协调时就是一个灾难，会造成参与者对整个模式的不信任，这其中客户是最为敏感、也最为关键的。几乎没有几个企业敢随便冒这个险。因此4G几乎只能用在一对一这种非常小规模的协作上。
 
@@ -138,7 +150,7 @@ Tags:
 
 **所有人与所有人同步整个工程的现状。每个人都要有自己的视角，自己的决定，自己的子团队要协调。**
 
-**建筑设计，机械设计，软件设计——可以说任何复杂的体系设计都更倾向于这样的“everybody on the same page”的协作模式。**
+**建筑设计，机械设计，[软件设计](https://www.zhihu.com/search?q=%E8%BD%AF%E4%BB%B6%E8%AE%BE%E8%AE%A1&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A708378659%7D)——可以说任何复杂的体系设计都更倾向于这样的“everybody on the same page”的协作模式。**
 
 **需要多大的带宽？没有上限可言。那么这是不是“仅仅是一部分先进企业的特别需求，与普通企业无关”呢？**
 
@@ -148,7 +160,7 @@ Tags:
 
 你会嫌5G的带宽对你太多余，这并不意味着你可以高兴“我可以省下不少流量费了”，而意味着你要好好想想你的智力深度还可以如何加强的问题了，想不出答案，你会被想到答案的企业化为灰烬。
 
-在最肤浅的层面上，谁能更快、更深、更好的利用新的高移动、大带宽网络环境，谁就将更好的摆脱中国中心城市超高的土地成本，得到下降30-50%的成本基线。这也已经是很了不起的比较优势了。无论将这优势放在降低成本上还是提高利润上，对没有这个能力的竞争对手而言都是压倒性甚至毁灭性的。
+在最肤浅的层面上，谁能更快、更深、更好的利用新的高移动、大带宽网络环境，谁就将更好的摆脱中国中心城市超高的土地成本，得到下降30-50%的[成本基线](https://www.zhihu.com/search?q=%E6%88%90%E6%9C%AC%E5%9F%BA%E7%BA%BF&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A708378659%7D)。这也已经是很了不起的比较优势了。无论将这优势放在降低成本上还是提高利润上，对没有这个能力的竞争对手而言都是压倒性甚至毁灭性的。
 
 我稍微做一点简单提示，因为要绕过一些我的保密需求，所以只能这样模模糊糊的提一提了：
 
@@ -174,9 +186,9 @@ Tags:
 
 再给点更直白的，基本就是我司的日常。
 
-[![](https://camo.githubusercontent.com/1b915a4d50381c3966508be53bb6f4553f7af906b5ea78ef7d527644454a34c0/68747470733a2f2f756e69636f6d2e7a68696d672e636f6d2f706963312e7a68696d672e636f6d2f76322d37323339323638326330646134396235313232643831643464326461363961302e6a7067)https://www.zhihu.com/video/1123764263738900480](https://link.zhihu.com/?target=https%3A//www.zhihu.com/video/1123764263738900480)5G时代的日常——注意，这不是一家两家尖端企业，而将是**大多数企业的日常，你如果觉得你“不可能转变到这样”，你最好做好最坏的思想准备。**：
+5G时代的日常——注意，这不是一家两家尖端企业，而将是**大多数企业的日常，你如果觉得你“不可能转变到这样”，你最好做好最坏的思想准备。**：
 
-[![](https://camo.githubusercontent.com/2cbf08ed45976b276f8bba38c5ec9a1557f5f2253d5491853e7788e7dab1dce7/68747470733a2f2f756e69636f6d2e7a68696d672e636f6d2f706963312e7a68696d672e636f6d2f76322d64343561353134303465316333336335653534316361643137336130326163382e6a7067)https://www.zhihu.com/video/1123764324090744832](https://link.zhihu.com/?target=https%3A//www.zhihu.com/video/1123764324090744832)
+  
 
 ---
 
@@ -184,13 +196,13 @@ Tags:
 
 并不是所有的业务都是吃鸡这种啊？
 
-你们以为实时协作是打第一人称射击吗？世界上只有你们的游戏这一种应用吗？
+你们以为实时协作是打[第一人称射击](https://www.zhihu.com/search?q=%E7%AC%AC%E4%B8%80%E4%BA%BA%E7%A7%B0%E5%B0%84%E5%87%BB&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A708378659%7D)吗？世界上只有你们的游戏这一种应用吗？
 
-譬如你是做建筑设计或者城市规划的，你的老板要直接进入你的场景查看进度，他要的是瞬间下载三四百兆的静态场景以便评估。
+譬如你是做[建筑设计](https://www.zhihu.com/search?q=%E5%BB%BA%E7%AD%91%E8%AE%BE%E8%AE%A1&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A708378659%7D)或者城市规划的，你的老板要直接进入你的场景查看进度，他要的是瞬间下载三四百兆的静态场景以便评估。
 
 你是做审计的，你的客户要的是瞬间载入上百万行的报表好看到你所指的数据问题。
 
-你是做尽职调查的，你的委托人要的是看到你的现场数据，看到高清的煤堆、仓库和海底机器人传来的扇贝。**高清，能分得出真钞假钞、公马母马一样的高清。**
+你是做[尽职调查](https://www.zhihu.com/search?q=%E5%B0%BD%E8%81%8C%E8%B0%83%E6%9F%A5&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A708378659%7D)的，你的委托人要的是看到你的现场数据，看到高清的煤堆、仓库和海底机器人传来的扇贝。**高清，能分得出真钞假钞、公马母马一样的高清。**
 
 **延迟三百毫秒，根本就不在关心范围之内。**
 
@@ -216,7 +228,7 @@ Tags:
 
 再举个例子，代码不再是我写好了你来审，而是全员在同一个文档上，看着同样的大屏，产品经理和总监默然不语，看着代码一行行的生成。立刻反馈，实时修正，注释被生成，被回复，问题被标注，被解答。编辑优先权在转移。原型被不断测试，不断集成。
 
-跟这个场景对比的根本不是“枪战游戏”，而是“我做好这一步、保存到云存储（比较原始的甚至是上传到微信甚至邮件附件）打电话或者发消息给你，告诉你收东西，你下载，打开，查看，告诉我你的意见”。
+跟这个场景对比的根本不是“枪战游戏”，而是“我做好这一步、保存到[云存储](https://www.zhihu.com/search?q=%E4%BA%91%E5%AD%98%E5%82%A8&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A708378659%7D)（比较原始的甚至是上传到微信甚至邮件附件）打电话或者发消息给你，告诉你收东西，你下载，打开，查看，告诉我你的意见”。
 
 更原始点的话，你所谓的网络延迟对标的甚至是“打印成纸张拿到领导办公室等签字”。
 
@@ -262,11 +274,11 @@ Tags:
 
 否则，看一下这个：
 
-[2020年，特朗普会连任吗?](https://www.zhihu.com/question/324842335/answer/694272869)
+[2020年，特朗普会连任吗?837 赞同 · 165 评论回答](https://www.zhihu.com/question/324842335/answer/694272869)
 
 ---
 
-## [](https://github.com/itrewub/jh-notes/blob/main/titled/5g.md#chapter-25g%E5%B0%86%E5%85%A8%E9%9D%A2%E7%9A%84%E6%94%B9%E5%8F%98%E4%BA%A4%E9%80%9A%E6%A8%A1%E5%BC%8F)Chapter 2——5G将全面的改变交通模式
+## Chapter 2——5G将全面的改变交通模式
 
 OK，说完了工作方式，我们再来谈无人驾驶。
 
@@ -278,7 +290,7 @@ OK，说完了工作方式，我们再来谈无人驾驶。
 
 **无人驾驶的前途根本不是“一辆车自己跑”，而应该是在高速道路系统的无人驾驶车道上由区段中心调度的无人运输单元，是通过立法来划分差速车道，通过系统整体调度来分配路权的一种“跑在公路上的高铁系统”。**
 
-你看似坐在一辆汽车上，实际上管理你的路线的系统极其类似高铁系统。它在不断的自动调整每一辆车的运行计划，作出返站维护充能和上线服务的决定，在为单独的乘客安排细密到分钟的班次，在道路资源中为它分配道路资源。
+你看似坐在一辆汽车上，实际上管理你的路线的系统极其类似高铁系统。它在不断的自动调整每一辆车的运行计划，作出返站维护[充能](https://www.zhihu.com/search?q=%E5%85%85%E8%83%BD&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A708378659%7D)和上线服务的决定，在为单独的乘客安排细密到分钟的班次，在道路资源中为它分配道路资源。
 
 把中国的高铁系统浓缩到一个局部的高速公路系统上，再把高铁列车转换为汽车，然后把班次提高万倍，你们看到的就是真正最早落地的自动驾驶系统。它不必考虑通用驾驶那么多的的意外情况——因为通用自动驾驶所真正棘手的首先是在路权不明晰前提下的伦理冲突，而不仅仅是技术问题。高铁能跑，高速公路上的“汽车高铁”自然也能跑。如有必要，甚至可以直接在现有高速上划分出专用车道来强行驱离侵犯车辆。
 
@@ -288,15 +300,15 @@ OK，说完了工作方式，我们再来谈无人驾驶。
 
 你们也不要觉得“我去那不是需要一个几平方公里的超级计算机随时随地知道全国所有自驾车道上所有车辆的在每一瞬间的位置？！这怎么可能？！要是中枢当机岂不是全局大乱？！延迟怎么办？！”
 
-你们想错了。事实上控制系统很类似人类的神经系统，大部分的事务都是下沉到各个区段中心自己调度的。这一百公里归这个地区中枢管，那一百公里归那个中枢管，交叠地带共同管理，无缝移交管理权。而即使是区段中枢，下面都还有具体的segment级的纯人工智能管理节点。一个节点管理的不过是四百米长的路段罢了。这个管辖范围内，根据安全车距的极限，一共只会有二十辆车的量级而已。并且因为这些车辆是被接管的，系统状态极其单纯，对管理中枢几乎没有压力。处置意外的手段也极其单纯——任何系统怀疑的不妥——譬如你胎压异常，都会命令你出列去应急车道等待处理。
+你们想错了。事实上控制系统很类似人类的神经系统，大部分的事务都是下沉到各个区段中心自己调度的。这一百公里归这个地区[中枢管](https://www.zhihu.com/search?q=%E4%B8%AD%E6%9E%A2%E7%AE%A1&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A708378659%7D)，那一百公里归那个中枢管，交叠地带共同管理，无缝移交管理权。而即使是区段中枢，下面都还有具体的segment级的纯人工智能管理节点。一个节点管理的不过是四百米长的路段罢了。这个管辖范围内，根据安全车距的极限，一共只会有二十辆车的量级而已。并且因为这些车辆是被接管的，系统状态极其单纯，对管理中枢几乎没有压力。处置意外的手段也极其单纯——任何系统怀疑的不妥——譬如你胎压异常，都会命令你出列去应急车道等待处理。
 
 效率体现在何处？
 
 它首先体验在道路容量大幅的增加。因为系统调度下的车辆的车距在理论上可以大幅的缩小。系统决定制动，是前后车同时下令制动的，而非如同人类驾驶员那样每一后车都要追加反应时间。车间安全距离会以一个可观的比例缩小。那意味着高速公路系统的运输效率会大幅提高。
 
-并且，交通系统的共乘属性会大幅的增加。你事实上是在面对一个班次密集到分钟级别的“高铁”系统，打开App，你会看到大量的可选共乘车——要比现在滴滴出行提供的班次密集两个数量级。
+并且，交通系统的[共乘](https://www.zhihu.com/search?q=%E5%85%B1%E4%B9%98&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A708378659%7D)属性会大幅的增加。你事实上是在面对一个班次密集到分钟级别的“高铁”系统，打开App，你会看到大量的可选共乘车——要比现在滴滴出行提供的班次密集两个数量级。
 
-车辆的所有权的内涵也会改变——很多人买车后会将闲置车辆——甚至车辆的闲置时段——放入自动调度系统收取系统租金。这一点还会有更高的表达——即车辆所有权的证券化。
+车辆的所有权的内涵也会改变——很多人买车后会将闲置车辆——甚至车辆的闲置时段——放入自动调度系统收取系统租金。这一点还会有更高的表达——即车辆所有权的[证券化](https://www.zhihu.com/search?q=%E8%AF%81%E5%88%B8%E5%8C%96&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A708378659%7D)。
 
 你仍然可以拥有完全私有的车辆，但纯私有车辆在高速公路系统上的路权会越来越被压缩——为他们专门保留的车道成本分摊到每一位自驾者身上，分量会越来越重。
 
@@ -304,7 +316,7 @@ OK，说完了工作方式，我们再来谈无人驾驶。
 
 第二阶段，不断有新的高速区段完成这一改造，相互连通——显然在中国这会首先发生在江浙沪大包邮区。
 
-第三阶段，随着骨干网的同步升级和前期调度系统的充分试错磨合，一些大规模企业支撑的系统化自动驾驶乘用系统会开始上线。所用车型整齐划一，几乎一样——比亚迪、厦门金龙、吉利、荣威、宁德时代……那时股票会一飞冲天——有整体规划过的大量运行维护场。 在这一阶段，自动驾驶系统会在交通法规中获得特殊地位。
+第三阶段，随着骨干网的同步升级和前期调度系统的充分试错磨合，一些大规模企业支撑的系统化自动驾驶乘用系统会开始上线。所用车型整齐划一，几乎一样——比亚迪、[厦门金龙](https://www.zhihu.com/search?q=%E5%8E%A6%E9%97%A8%E9%87%91%E9%BE%99&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A708378659%7D)、吉利、荣威、宁德时代……那时股票会一飞冲天——有整体规划过的大量运行维护场。 在这一阶段，自动驾驶系统会在交通法规中获得特殊地位。
 
 第四阶段，完全自驾在高速系统已经越来越不经济。纯自驾过路费越来越贵（将会由人工智能通过算法实现逐车实时定价），而系统接管驾驶的审查对纯私有车辆又很是繁琐——你的车要缴纳车况审查费用并且经过系统审查系统才会将你纳入自动驾驶体系。于是传统意义上的纯私家车辆越来越少——它将渐渐演变为一种奢侈品。但在这个阶段，一些城市内的主干道也开始了新公交体系的升级——“快速公交道”直接升格为了自动驾驶道，并且在飞快的占有道路资源。
 
@@ -336,13 +348,13 @@ OK，说完了工作方式，我们再来谈无人驾驶。
 
 下面是2011年公布的希思罗机场个人自动运输系统，看清楚，**2011年**。这个项目已经具备了所有的工程要素。
 
-[![](https://camo.githubusercontent.com/69851bfddc5d9ea09063f6f914cf79ab88733d9d9df4f0dccd264b322a61fa28/68747470733a2f2f756e69636f6d2e7a68696d672e636f6d2f706963322e7a68696d672e636f6d2f76322d65366462393661366265386163653862383734333733303666333064323465642e6a7067)https://www.zhihu.com/video/1123674795690332160](https://link.zhihu.com/?target=https%3A//www.zhihu.com/video/1123674795690332160)
+  
 
 下面这个视频也可以看看——虽然都是在研项目，但并不全是PPT和效果图。
 
-[![](https://camo.githubusercontent.com/544e21594f4cc99fc5250c5cb81a1913bedc75ce6c4559ddc7a49062a04c9149/68747470733a2f2f756e69636f6d2e7a68696d672e636f6d2f706963332e7a68696d672e636f6d2f76322d31376239373331326435323237663335613164306433633836626133613331652e6a7067)https://www.zhihu.com/video/1123678360823517184](https://link.zhihu.com/?target=https%3A//www.zhihu.com/video/1123678360823517184)
+  
 
-## [](https://github.com/itrewub/jh-notes/blob/main/titled/5g.md#charpter-3--5g%E5%AF%B9%E4%BF%A1%E6%81%AF%E6%9E%B6%E6%9E%84%E5%B0%86%E4%BA%A7%E7%94%9F%E9%9D%A9%E5%91%BD%E6%80%A7%E5%BD%B1%E5%93%8D)**charpter 3 —— 5G对信息架构将产生革命性影响**
+## **charpter 3 —— 5G对信息架构将产生革命性影响**
 
 说完了故事，我们回到这一章的主题——5G将为信息架构带来什么样的变化？
 
@@ -422,7 +434,7 @@ P.S：
 
 **信号弹的意义不在于它自己有多亮，也不在于第一次战斗到底打得如何，而在于总攻已经发起。**
 
-## [](https://github.com/itrewub/jh-notes/blob/main/titled/5g.md#chapter-4-5g%E5%B0%86%E6%90%BA%E6%89%8B%E4%BA%BA%E5%B7%A5%E6%99%BA%E8%83%BD%E6%94%B9%E5%8F%98%E5%81%A5%E5%BA%B7%E4%BA%A7%E4%B8%9A%E6%A0%BC%E5%B1%80)**Chapter 4 5G将携手人工智能改变健康产业格局**
+## **Chapter 4 5G将携手人工智能改变健康产业格局**
 
 很多人一听到5G和医疗，第一念头想到的就是远程手术，第二句话就是“在医院接光纤就可以更好的实现”。这话在事实层面上没有说错，但是却大大的低估了移动医疗的战略意义。
 
@@ -432,7 +444,9 @@ P.S：
 
 先看好下面这张图：
 
-[![](https://camo.githubusercontent.com/13e050e2edbafc9edf4a668dd5612515ac2f3ea382f9ac013934ac995864e5e1/68747470733a2f2f706963332e7a68696d672e636f6d2f35302f76322d32343431313635323931303436373538373965383765616261663665383266385f373230772e6a70673f736f757263653d3139343065663563)](https://camo.githubusercontent.com/13e050e2edbafc9edf4a668dd5612515ac2f3ea382f9ac013934ac995864e5e1/68747470733a2f2f706963332e7a68696d672e636f6d2f35302f76322d32343431313635323931303436373538373965383765616261663665383266385f373230772e6a70673f736f757263653d3139343065663563)未来十年，我们将新增约1.5亿50岁以上人口。未来二十五年，这个数字预计约为3亿。
+![](https://pic2.zhimg.com/50/v2-814c55bef6ae29355c30e68064424d01_720w.jpg?source=1940ef5c)
+
+未来十年，我们将新增约1.5亿50岁以上人口。未来二十五年，这个数字预计约为3亿。
 
 你当然不能指望着庞大的医疗需求都分布在几个中心大城市，他们同样将分布在各个二三四线城市，乃至于部分村镇。
 
@@ -440,13 +454,21 @@ P.S：
 
 高教育程度的医护人员占比过小。
 
-[![](https://camo.githubusercontent.com/9e9fa6456bc219e5804a048acbcfa29ec1957908378d7731efa7003672d2130e/68747470733a2f2f706963322e7a68696d672e636f6d2f35302f76322d61306236613634326538313131373064343330396261623735626536663832325f373230772e6a70673f736f757263653d3139343065663563)](https://camo.githubusercontent.com/9e9fa6456bc219e5804a048acbcfa29ec1957908378d7731efa7003672d2130e/68747470733a2f2f706963322e7a68696d672e636f6d2f35302f76322d61306236613634326538313131373064343330396261623735626536663832325f373230772e6a70673f736f757263653d3139343065663563)经验丰富的高级职称医师过少。
+![](https://pic2.zhimg.com/50/v2-cd43d6728c5337bc91bab9fa3b7b3163_720w.jpg?source=1940ef5c)
 
-[![](https://camo.githubusercontent.com/10f3652d180c37881eb609edf8bb0cce7457f36551a34a9a57d5e209eaffa55f/68747470733a2f2f706963612e7a68696d672e636f6d2f35302f76322d66396331613137643934383434353832666632363765626537313965663839345f373230772e6a70673f736f757263653d3139343065663563)](https://camo.githubusercontent.com/10f3652d180c37881eb609edf8bb0cce7457f36551a34a9a57d5e209eaffa55f/68747470733a2f2f706963612e7a68696d672e636f6d2f35302f76322d66396331613137643934383434353832666632363765626537313965663839345f373230772e6a70673f736f757263653d3139343065663563)大多数高水平医院都集中在中等及以上发达地区。
+经验丰富的高级职称医师过少。
 
-[![](https://camo.githubusercontent.com/688a979f582a322b52ae92d6241f3a384f7fecc7dc98f7905440445b4148d91f/68747470733a2f2f706963312e7a68696d672e636f6d2f35302f76322d34333035623337393738636536643039313033306633343361393435623534305f373230772e6a70673f736f757263653d3139343065663563)](https://camo.githubusercontent.com/688a979f582a322b52ae92d6241f3a384f7fecc7dc98f7905440445b4148d91f/68747470733a2f2f706963312e7a68696d672e636f6d2f35302f76322d34333035623337393738636536643039313033306633343361393435623534305f373230772e6a70673f736f757263653d3139343065663563)其中北京、广东、江苏三省份占据了中国三分之一的三甲医院份额。
+![](https://pic3.zhimg.com/50/v2-0b645e44568d22256857188187eb668d_720w.jpg?source=1940ef5c)
 
-[![](https://camo.githubusercontent.com/4bce7ad3ae6f4457d534d8ba3c7115079b6139bcd9d1e8466d325e7dadc23af1/68747470733a2f2f706963322e7a68696d672e636f6d2f35302f76322d31666232303339333336363265653030656361323333666235663832643838375f373230772e6a70673f736f757263653d3139343065663563)](https://camo.githubusercontent.com/4bce7ad3ae6f4457d534d8ba3c7115079b6139bcd9d1e8466d325e7dadc23af1/68747470733a2f2f706963322e7a68696d672e636f6d2f35302f76322d31666232303339333336363265653030656361323333666235663832643838375f373230772e6a70673f736f757263653d3139343065663563)（以上数据援引自《2014年中国卫生年鉴》国家统计局数据，你们可以猜一猜，时隔四年，局势缓和了？）
+大多数高水平医院都集中在中等及以上发达地区。
+
+![](https://pic1.zhimg.com/50/v2-9c0fb5244a67af18e5f7ad8675548e87_720w.jpg?source=1940ef5c)
+
+其中北京、广东、江苏三省份占据了中国三分之一的三甲医院份额。
+
+![](https://pica.zhimg.com/50/v2-84b6b3c1002d6ebec67256a9ae5b2d75_720w.jpg?source=1940ef5c)
+
+（以上数据援引自《2014年中国卫生年鉴》国家统计局数据，你们可以猜一猜，时隔四年，局势缓和了？）
 
 形势之危急，如狂澜之将至。
 
@@ -484,9 +506,13 @@ P.S：
 
 你知道现代医疗成像技术生成的3D重建模型有多大数据量吗？
 
-[![](https://camo.githubusercontent.com/db1b518b9e490ec299bce8eef922955a147845a595a30644f5bd1912dcfb0651/68747470733a2f2f706963332e7a68696d672e636f6d2f35302f76322d32353736333764393237393063333931626661623936663337626239343364385f373230772e6a70673f736f757263653d3139343065663563)](https://camo.githubusercontent.com/db1b518b9e490ec299bce8eef922955a147845a595a30644f5bd1912dcfb0651/68747470733a2f2f706963332e7a68696d672e636f6d2f35302f76322d32353736333764393237393063333931626661623936663337626239343364385f373230772e6a70673f736f757263653d3139343065663563)
+![](https://pic2.zhimg.com/50/v2-298beed31fa1256a104b9ad84e55ed28_720w.jpg?source=1940ef5c)
 
-[![](https://camo.githubusercontent.com/f70c25f55ba0792b2ff343b97778f2d0ee0f1aa78174d8a5ba83a6fcbaa75200/68747470733a2f2f706963312e7a68696d672e636f6d2f35302f76322d61306635616362333462353361383038316465633635633463633166396137335f373230772e6a70673f736f757263653d3139343065663563)](https://camo.githubusercontent.com/f70c25f55ba0792b2ff343b97778f2d0ee0f1aa78174d8a5ba83a6fcbaa75200/68747470733a2f2f706963312e7a68696d672e636f6d2f35302f76322d61306635616362333462353361383038316465633635633463633166396137335f373230772e6a70673f736f757263653d3139343065663563)轻轻松松重构的的模型就有上千万面（实际上复杂度没有上限），原始图像数据，只要医生需要，随便就论G。
+  
+
+![](https://pica.zhimg.com/50/v2-1c06a6ed9908ce92948d104cd7656f35_720w.jpg?source=1940ef5c)
+
+轻轻松松重构的的模型就有上千万面（实际上复杂度没有上限），原始图像数据，只要医生需要，随便就论G。
 
 如果你们觉得的游戏的场景很宏伟很震撼吗？经过充分优化的游戏场景的复杂度在这些医疗影像面前都是绝对侏儒。
 
@@ -498,13 +524,19 @@ P.S：
 
 未来的医疗服务，几乎不太可能继续维持“人人到院就治”这个模式。目前人口老龄化高峰还没有来，你们自己亲身去医院看一看，这就是中国目前的常态：
 
-[![](https://camo.githubusercontent.com/4cdc954fd33da3f8b9db7dbfc1681f9799d56d58e384a4bdb91f9f1c178aa34a/68747470733a2f2f706963322e7a68696d672e636f6d2f35302f76322d39616431383236663764383530316462643230613036383730376431343434395f373230772e6a70673f736f757263653d3139343065663563)](https://camo.githubusercontent.com/4cdc954fd33da3f8b9db7dbfc1681f9799d56d58e384a4bdb91f9f1c178aa34a/68747470733a2f2f706963322e7a68696d672e636f6d2f35302f76322d39616431383236663764383530316462643230613036383730376431343434395f373230772e6a70673f736f757263653d3139343065663563)
+![](https://pic2.zhimg.com/50/v2-05a4f1c14fdc3044c92a0c0397301464_720w.jpg?source=1940ef5c)
 
-[![](https://camo.githubusercontent.com/f8948f6502c337969dc08e15094bde30b8be042b9834d17d18a34eb9ef60a1c3/68747470733a2f2f706963612e7a68696d672e636f6d2f35302f76322d31633931366135363632653837353664373938623864633261633665326132345f373230772e6a70673f736f757263653d3139343065663563)](https://camo.githubusercontent.com/f8948f6502c337969dc08e15094bde30b8be042b9834d17d18a34eb9ef60a1c3/68747470733a2f2f706963612e7a68696d672e636f6d2f35302f76322d31633931366135363632653837353664373938623864633261633665326132345f373230772e6a70673f736f757263653d3139343065663563)而我再说一遍：这还远远没有到高峰。记住上面的人口年龄结构图，未来的医疗需求要倍增于此都不止——除非你认为中国的人均寿命会出现下滑，会有大批人活不过他们的父母辈。
+  
+
+![](https://pic3.zhimg.com/50/v2-96bbadda06dac71aa847cbbe6c9e40e6_720w.jpg?source=1940ef5c)
+
+而我再说一遍：这还远远没有到高峰。记住上面的人口年龄结构图，未来的医疗需求要倍增于此都不止——除非你认为中国的人均寿命会出现下滑，会有大批人活不过他们的父母辈。
 
 可能吗？
 
 时候没有到，时候到了，只有远程医疗和移动医疗能救你们的命。你们尽可以去嘲笑它多么的笨拙、卡顿、不完美。但是到时候你们绝对没能力去笑它“不现实”——现实会让你笑不出来。
+
+  
 
 Charpter 5 5G与新制造业
 
@@ -518,21 +550,31 @@ Charpter 5 5G与新制造业
 
 譬如景德镇的瓷器生产：
 
-[![](https://camo.githubusercontent.com/2e21374b9cc8d7fb2bc78c6c4613aaa24784853dba8d3f6cb218e2c7211e614b/68747470733a2f2f706963612e7a68696d672e636f6d2f35302f76322d33663763613633333861653735396535663165376337643539353763663734665f373230772e6a70673f736f757263653d3139343065663563)](https://camo.githubusercontent.com/2e21374b9cc8d7fb2bc78c6c4613aaa24784853dba8d3f6cb218e2c7211e614b/68747470733a2f2f706963612e7a68696d672e636f6d2f35302f76322d33663763613633333861653735396535663165376337643539353763663734665f373230772e6a70673f736f757263653d3139343065663563)
+![](https://pic1.zhimg.com/50/v2-fad0aea1f2665c488f16a708d7eebd05_720w.jpg?source=1940ef5c)
 
-[![](https://camo.githubusercontent.com/6b995439c9b8a0e7cfac72b8aebfd445e9733ca15e1cb8c4772105b2db58b682/68747470733a2f2f706963332e7a68696d672e636f6d2f35302f76322d35373835343936333934313766613766326138383430316263386133353735375f373230772e6a70673f736f757263653d3139343065663563)](https://camo.githubusercontent.com/6b995439c9b8a0e7cfac72b8aebfd445e9733ca15e1cb8c4772105b2db58b682/68747470733a2f2f706963332e7a68696d672e636f6d2f35302f76322d35373835343936333934313766613766326138383430316263386133353735375f373230772e6a70673f736f757263653d3139343065663563)
+  
 
-[![](https://camo.githubusercontent.com/5d03cb9b97480c5bb452588ccee8c5b707ad00f021eed287e0b29eb50c87f7e9/68747470733a2f2f706963312e7a68696d672e636f6d2f35302f76322d34626461626334386265656537626138653336393932646438386365393163395f373230772e6a70673f736f757263653d3139343065663563)](https://camo.githubusercontent.com/5d03cb9b97480c5bb452588ccee8c5b707ad00f021eed287e0b29eb50c87f7e9/68747470733a2f2f706963312e7a68696d672e636f6d2f35302f76322d34626461626334386265656537626138653336393932646438386365393163395f373230772e6a70673f736f757263653d3139343065663563)
+![](https://pic3.zhimg.com/50/v2-b6c6389068836808b34f03ee8901bf09_720w.jpg?source=1940ef5c)
 
-[![](https://camo.githubusercontent.com/f69db7b8c954b60da8033767f7b551a51fdfe23f4ed27fe1cbf83538f0876316/68747470733a2f2f706963612e7a68696d672e636f6d2f35302f76322d32333366636137363363343436643362306534623561343266356534303634315f373230772e6a70673f736f757263653d3139343065663563)](https://camo.githubusercontent.com/f69db7b8c954b60da8033767f7b551a51fdfe23f4ed27fe1cbf83538f0876316/68747470733a2f2f706963612e7a68696d672e636f6d2f35302f76322d32333366636137363363343436643362306534623561343266356534303634315f373230772e6a70673f736f757263653d3139343065663563)
+  
 
-[![](https://camo.githubusercontent.com/5cde9fe9fbed0e80bf71e315539546fecb81b98b768906118b56eefbe9d72869/68747470733a2f2f706963312e7a68696d672e636f6d2f35302f76322d38323630373832306335353864363363316439313564343634623632333331635f373230772e6a70673f736f757263653d3139343065663563)](https://camo.githubusercontent.com/5cde9fe9fbed0e80bf71e315539546fecb81b98b768906118b56eefbe9d72869/68747470733a2f2f706963312e7a68696d672e636f6d2f35302f76322d38323630373832306335353864363363316439313564343634623632333331635f373230772e6a70673f736f757263653d3139343065663563)这就是典型的依靠人力搬运、人力交接完成物流环节，依靠人力加工来完成加工环节。
+![](https://pic1.zhimg.com/50/v2-9f2d94dd32879c088dc41c10cb507ef8_720w.jpg?source=1940ef5c)
+
+  
+
+![](https://pic2.zhimg.com/50/v2-3e98f99d1c6aacefbd2d4deafe7ab8bc_720w.jpg?source=1940ef5c)
+
+  
+
+![](https://pic2.zhimg.com/50/v2-b09777ec74e64bf0d2edab749e20818c_720w.jpg?source=1940ef5c)
+
+这就是典型的依靠人力搬运、人力交接完成物流环节，依靠人力加工来完成加工环节。
 
 然后我们来看一下现代制造业：
 
-[![](https://camo.githubusercontent.com/c0250c53d2249db9c3558ecb64427cab8e7e3f2373cfce44db975fe0702fbf76/68747470733a2f2f756e69636f6d2e7a68696d672e636f6d2f706963322e7a68696d672e636f6d2f76322d66373633666163376438383534333535363362303833336566613236653638642e6a7067)https://www.zhihu.com/video/1137003295083253760](https://link.zhihu.com/?target=https%3A//www.zhihu.com/video/1137003295083253760)
+  
 
-[![](https://camo.githubusercontent.com/d7224c1a90e2a00015e25a1bb90074e043eb2c09f555d00575414b101a4ebce0/68747470733a2f2f756e69636f6d2e7a68696d672e636f6d2f706963342e7a68696d672e636f6d2f76322d66666361643932363235643262653264643837356434383532313633656432612e6a7067)https://www.zhihu.com/video/1137004191393505280](https://link.zhihu.com/?target=https%3A//www.zhihu.com/video/1137004191393505280)看到了吗？红色的反转架和夹持机械臂构成了物流环节，紧接着焊接机械臂完成了加工环节，然后夹持机械臂再将工件移向下一个环节。
+看到了吗？红色的反转架和夹持机械臂构成了物流环节，紧接着焊接机械臂完成了加工环节，然后夹持机械臂再将工件移向下一个环节。
 
 现代的高度自动化的制造业到底是如何击败了传统制造业？其实从本质上讲，就是首先在加工环节进行了高度标准化基础上的高度自动化，同时也在物流上做了接口的高度标准化前提上的高度自动化。而这其中，事实上真正的瓶颈并不像一般人认为的样在加工环节，而是**物流环节**。
 
@@ -570,13 +612,17 @@ Charpter 5 5G与新制造业
 
 **而我们离它事实上只有一步之遥。**
 
-[在德国工业 4.0 背景的影响下，制造业会迎来什么样的变革？](https://www.zhihu.com/question/27948054/answer/112376116?preview_video_id=1105799304266166272)这一步，就是厂区内的精准自动导航和精准定位。本质上，它实际上是敏捷化、低延迟化、宽带化的综合调度的无人自动驾驶系统。
+[在德国工业 4.0 背景的影响下，制造业会迎来什么样的变革？​www.zhihu.com/question/27948054/answer/112376116?preview_video_id=1105799304266166272![](https://pic2.zhimg.com/v2-963f8e2d8ee13c2ba0b9275be5fbed5d_180x120.jpg)](https://www.zhihu.com/question/27948054/answer/112376116?preview_video_id=1105799304266166272)
+
+这一步，就是厂区内的精准自动导航和精准定位。本质上，它实际上是敏捷化、低延迟化、宽带化的综合调度的无人自动驾驶系统。
 
 这就是下一代的工业物联网，是**鸿蒙在打算做的事情，是5G最直接野心**。
 
 第二，5G还可以用于将“劳动力”的物理层面与精神层面分离，将原有的部分体力劳动变成远程操控机械的智力劳动。仅仅经过简单的培训，就可以获得大量的生产线遥控操作人员，突破本地雇佣的人力资源瓶颈，使用所有5G覆盖地区的人力。
 
-[中国崛起！世界挖掘机技术哪家强？华为5G+蓝翔！！！](https://link.zhihu.com/?target=https%3A//b23.tv/av57103323)
+[中国崛起！世界挖掘机技术哪家强？华为5G+蓝翔！！！​b23.tv/av57103323](https://link.zhihu.com/?target=https%3A//b23.tv/av57103323)
+
+  
 
 （未完，待续，评论区留言等于订阅）
 
@@ -584,7 +630,9 @@ PS2:
 
 我们看一幅地图：
 
-[![](https://camo.githubusercontent.com/acb241bda6c6182dd4e5c9a586ab164214150847338e29b51f7b81d38a7ab0fd/68747470733a2f2f706963312e7a68696d672e636f6d2f35302f76322d34393063363035356435643932373832323138346537666130326632376131315f373230772e6a70673f736f757263653d3139343065663563)](https://camo.githubusercontent.com/acb241bda6c6182dd4e5c9a586ab164214150847338e29b51f7b81d38a7ab0fd/68747470733a2f2f706963312e7a68696d672e636f6d2f35302f76322d34393063363035356435643932373832323138346537666130326632376131315f373230772e6a70673f736f757263653d3139343065663563)这是腓尼基人的贸易网络图。
+![](https://pica.zhimg.com/50/v2-dbe01ae8819d7482dce46cee7b84fd10_720w.jpg?source=1940ef5c)
+
+这是腓尼基人的贸易网络图。
 
 腓尼基人的老巢在地图最右侧Byblos、Sidon、Tyre三个城市扎堆的部位。这个部也就是现代黎巴嫩/以色列所在的大致部位。这个部位上接希腊，下接埃及，右邻两河流域。这地方自古就是个经商的好地方——它自己几乎没什么物产。腓尼基人借着这地理优势，打造了一个航海商业帝国。这帝国向南遍布整个地中海南岸。
 
@@ -620,13 +668,20 @@ PS2:
 
 更何况，5G比4G何止“小小的参数进步”而已呢？
 
+  
+
+  
+
 如果你打算用居高临下的语气来教训无知的答主，建议先看看这几个夹子了解一下对手的量级：
 
-[科学答集](https://zhihu.com/collection/304168613)
+[科学答集9 万浏览 · 2943 关注收藏夹![](https://pic2.zhimg.com/80/v2-b2918ef3f9c19572ba524ac59316a917_1440w.png)](https://zhihu.com/collection/304168613)
 
-[社科答集](https://zhihu.com/collection/304176992)
+  
 
-[文艺答集](https://zhihu.com/collection/304177043)
+[社科答集20.3 万浏览 · 3931 关注收藏夹![](https://pic2.zhimg.com/80/v2-b2918ef3f9c19572ba524ac59316a917_1440w.png)](https://zhihu.com/collection/304176992)
 
+  
+
+[文艺答集3.8 万浏览 · 1536 关注收藏夹![](https://pic2.zhimg.com/80/v2-b2918ef3f9c19572ba524ac59316a917_1440w.png)](https://zhihu.com/collection/304177043)
 
 #未完待续TBC 
