--- a/Anonymity/07 - 军事技术与艺术/通用步枪.md
+++ b/Anonymity/07 - 军事技术与艺术/通用步枪.md
@@ -1,10 +1,10 @@
-# 武器制造
-*中国可以造出很多高精尖的武器，那么中国可以造出好的基础武器(比如步枪）吗？如果不能，原因是什么?*
+# 通用步枪
+[中国可以造出很多高精尖的武器，那么中国可以造出好的基础武器(比如步枪）吗？如果不能，原因是什么？](https://www.zhihu.com/question/346268511/answer/828069888)
 
 > Author: #Anonymity
-Last update: *23/07/2021* 
+Last update: *02/06/2022* 
 Links: [军事技术与艺术](https://zhihu.com/collection/373157508)
-Tags: # 
+Tags: 
 
  
 很多人可能会认为远程狙击步枪比突击步枪更“高级”，所以设计上肯定比后者更难。
