--- a/Anonymity/07 - 军事技术与艺术/金融战.md
+++ b/Anonymity/07 - 军事技术与艺术/金融战.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity 
 Last update: *31/03/2022* 
-Links: [[拿住不抛]] [[财富观]] [[股市]] [[勿忘我]] [[大国影响]] [[Anonymity/01 - 家族答集/大格局]] [[存钱]] [[花钱]] [[两难]] [[以钱为形式的自由]] [[仇穷与仇富]] [[资本家2]]
+Links: [[拿住不抛]] [[财富观]] [[低估值]] [[勿忘我]] [[大国影响]] [[Anonymity/01 - 家族答集/大格局]] [[存钱]] [[花钱]] [[两难]] [[以钱为形式的自由]] [[仇穷与仇富]] [[资本家2]]
 Tags: 
 
 **先说好，以下不是投资建议，仅供参考。**
