--- a/Anonymity/01 - 家族答集/岂甘人后.md
+++ b/Anonymity/01 - 家族答集/岂甘人后.md
@@ -1,9 +1,10 @@
+# 岂甘人后
 [为什么父母不让我躺平，总说看看别人为什么一直学习，为什么人活着一定要跟别人比，一定要吃苦?](https://www.zhihu.com/question/533509957/answer/2506021968)
 
 > Author: #Anonymity 
 Last update: *29/05/2022* 
 Links: [[气泡膜]] [[躺平]]
-Tags: #待命名TBN 
+Tags: 
 
 > 高祖常繇咸阳，纵观，观秦皇帝，喟然太息曰：「**嗟乎，大丈夫当如是也**！」
 
