--- a/Anonymity/02 - 企管答集/人走茶凉.md
+++ b/Anonymity/02 - 企管答集/人走茶凉.md
@@ -1,23 +1,22 @@
 # 人走茶凉
-*你一旦辞职了，好像任何人都不认识你了，是真的吗？*
+[你一旦辞职了，好像任何人都不认识你了，是真的吗？](https://www.zhihu.com/question/403359939/answer/1451531588)
 
 > Author: #Anonymity
 Last update: *23/07/2021* 
 Links: 
-Tags:  # 
-
-
+Tags:  
+  
 入职做员工，和认准了老大跟团队是两码事。
 
 做员工，其他员工最好不要有私人交往。因为企业有流程架构，比较忌讳员工之间有超出工作关系的其他关系。举个例子，你是会计，ta是出纳，他是预算主管，你们三每天下班一起唱K，老板没法弄；你是生产ta是质检，你们亲如姐妹，可能影响企业的正常运转。
 
-同事之间恋爱、联姻、借贷、担保、合伙……都是复杂得很的关系交往，一个不好手一滑，工作关系就会被扭曲。弄的不好瞬间可能会有性骚扰这类的罪名落到你头上。
+同事之间恋爱、联姻、借贷、担保、合伙……都是复杂得很的关系交往，一个不好手一滑，工作关系就会被扭曲。弄的不好瞬间可能会有[性骚扰](https://www.zhihu.com/search?q=%E6%80%A7%E9%AA%9A%E6%89%B0&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A1451531588%7D)这类的罪名落到你头上。
 
 尤其是同僚之间常有隐形的竞争关系，你觉得亲如一家不好意思争带队机会，对方若无其事捷足先登你又要玻璃心，这就很无谓了。
 
 同事之间的最好关系就是通过高度的能力和职业精神赢得所有人的看中，暗地里想“要是有一天我要创业，这个人我已经要拉过来帮我做事”。这样就是可以做到的最好了。
 
-不要称兄道弟、拉帮结派，不要搞攻守同盟之类的各种小动作。
+不要称兄道弟、拉帮结派，不要搞[攻守同盟](https://www.zhihu.com/search?q=%E6%94%BB%E5%AE%88%E5%90%8C%E7%9B%9F&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A1451531588%7D)之类的各种小动作。
 
 这不是在“拉近关系，以便工作”，而是自绝生路——因为真有实力给你创造更好的职业前途的人，看到这些行为都会对你警觉三分。
 
@@ -45,15 +44,12 @@ Tags:  #
 
 这种关系要比只是做一个态度专业的员工复杂很多，这的确会涉及到一些私人交往，因为仅仅职场上的观察不能让大部分有潜在意向的合伙人放心。这个往往会有一些似有若无的私人感情因素在内。
 
-这种关系有一些样本，比如唐顿庄园里的主仆关系，就是既保持专业、又有不明言的私人感情的关系。
+这种关系有一些样本，比如[唐顿庄园](https://www.zhihu.com/search?q=%E5%94%90%E9%A1%BF%E5%BA%84%E5%9B%AD&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A1451531588%7D)里的主仆关系，就是既保持专业、又有不明言的私人感情的关系。
 
 但无论如何，专业关系仍然优先。
 
-总之，离职后没人理会你，如果你认为这是一个需要解决的问题，那么解决的方向不可以是“混成哥们/闺蜜”，而只能是展现工作效能和职业伦理水平。
+总之，离职后没人理会你，如果你认为这是一个需要解决的问题，那么解决的方向不可以是“混成哥们/闺蜜”，而只能是展现[工作效能](https://www.zhihu.com/search?q=%E5%B7%A5%E4%BD%9C%E6%95%88%E8%83%BD&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A1451531588%7D)和职业伦理水平。
 
 走前一条路，你解决了“没人理会“的症状，但恐怕等着你的都是“还可以再宰一刀“的盘算。
 
 你确信更好吗？
-
-
-
