--- a/Anonymity/04 - 社科答集/低估值.md
+++ b/Anonymity/04 - 社科答集/低估值.md
@@ -1,8 +1,8 @@
-# 股市
-*在A股买低估值的股票有什么意义?*
+# 低估值
+[在A股买低估值的股票有什么意义？](https://www.zhihu.com/question/402690394/answer/1311486933)
 
 > Author: #Anonymity
-Last update: *23/07/2021* 
+Last update: *30/05/2022* 
 Links: 
 Tags:  
 
