--- a/Anonymity/08 - 文艺答集/八佰1.md
+++ b/Anonymity/08 - 文艺答集/八佰1.md
@@ -1,5 +1,5 @@
-# 八佰 - 之二
-*如何评价电影《八佰》?*
+# 八佰
+[如何评价电影《八佰》？](https://www.zhihu.com/question/392095003/answer/1422886152)
 
 > Author: #Anonymity
 Last update: *23/07/2021* 
