--- a/Anonymity/01 - 家族答集/保持单纯.md
+++ b/Anonymity/01 - 家族答集/保持单纯.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity 
 Last update: *27/11/2021* 
-Links: [[世故青年]] [[懒散]] [[从心所欲不逾矩]] [[冷漠]] [[厉害思维]] 
+Links: [[世故青年]] [[懒散]] [[从心所欲不逾矩]] [[Anonymity/01 - 家族答集/冷漠]] [[厉害思维]] 
 Tags:  
 
 为什么要保持“单纯”？
