--- a/Anonymity/01 - 家族答集/穿越幽谷.md
+++ b/Anonymity/01 - 家族答集/穿越幽谷.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity 
 Last update: *25/09/2021* 
-Links: [[Anonymity/01 - 家族答集/送你一句话]] [[幸福感]] [[祷告观]] [[苦熬]] [[苦熬 1]] [[对人类失望]] [[看不到希望]] [[爱]] [[最重要的能力]] [[烦躁]]
+Links: [[一句话]] [[幸福感]] [[祷告观]] [[苦熬]] [[苦熬 1]] [[对人类失望]] [[看不到希望]] [[爱]] [[最重要的能力]] [[烦躁]]
 Tags:  
 
 
