--- a/Anonymity/04 - 社科答集/买下美国.md
+++ b/Anonymity/04 - 社科答集/买下美国.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity 
 Last update: *14/12/2021* 
-Links: [[撒钱]] [[房价崩盘]] [[房价下跌]] [[存钱]] [[低估值]] [[拿住不抛]] 
+Links: [[撒钱]] [[房价崩溃]] [[房价下跌]] [[存钱]] [[低估值]] [[拿住不抛]] 
 Tags:  
 
 
