--- a/Anonymity/04 - 社科答集/房价下跌.md
+++ b/Anonymity/04 - 社科答集/房价下跌.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity 
 Last update: *13/10/2021* 
-Links: [[房价崩盘]] [[房市预测]] [[全球化与失业]] [[智能失业]] [[钱]] [[穷吗你]] [[撒钱]] [[中美脱钩]] [[时候不到]] [[去中心化]]
+Links: [[房价崩溃]] [[房市预测]] [[全球化与失业]] [[智能失业]] [[钱]] [[穷吗你]] [[撒钱]] [[中美脱钩]] [[时候不到]] [[去中心化]]
 Tags:  
 沙海拾金：[[生育率.jpeg]]
 
