--- a/Anonymity/04 - 社科答集/核潜艇.md
+++ b/Anonymity/04 - 社科答集/核潜艇.md
@@ -4,7 +4,7 @@
 
 > Author: #Anonymity 
 Last update: *18/09/2021* 
-Links: [[由海向陆]] [[航空母舰]] [[军舰对潜艇]] [[现代驱逐舰]] [[巡洋舰]] [[战略轰炸机]] [[核披萨]] [[核聚变]] [[中国的规模]]
+Links: [[由海向陆]] [[航空母舰]] [[军舰对潜艇]] [[舰炮]] [[巡洋舰]] [[战略轰炸机]] [[核披萨]] [[核聚变]] [[中国的规模]]
 Tags:   
 
 
