--- a/Anonymity/04 - 社科答集/终极目标.md
+++ b/Anonymity/04 - 社科答集/终极目标.md
@@ -1,5 +1,5 @@
 # 终极目标
-*人类社会的终极目标是什么?*
+[人类社会的终极目标是什么？](https://www.zhihu.com/question/419458902/answer/1467759400)
 
 > Author: #Anonymity
 Last update: *23/07/2021* 
