--- a/摘抄本/句子摘录.md
+++ b/摘抄本/句子摘录.md
@@ -6,6 +6,68 @@ Links:
 Tags: 
 
 
+“把别人的安全摆在自己的自由之后”，即是敌人的本质定义。
+
+——[《我的自由与你的安全》](https://www.zhihu.com/question/462633806/answer/2523677473)
+
+  
+
+---
+
+  
+
+有爱的人隔山跨海如同在，
+
+无爱的人对面同床不相识。
+
+——[《同学同事》](https://www.zhihu.com/question/521467583/answer/2477115858)
+
+  
+
+---
+
+  
+
+试图寻找一条或者几条简单的格言警句来敷衍对稳健可持续的决策体系的探索，是一种非常危险的懒惰。
+
+——[《简明格言》](https://www.zhihu.com/question/293390085/answer/726784502)
+
+  
+
+---
+
+  
+
+当自觉深爱而被弃如敝履的时候，失败的一定不是爱本身，而是我们在爱之中终究参杂了自己的私欲。  
+  
+我们终究只是希望对方能够接受自己已经觉得非常丰厚的、对对方至关重要的交易。  
+  
+这不是爱，这只是贿赂。并不因为贿赂的丰厚，就改变贿赂的本质。  
+  
+并不因为我们嫁妆丰厚，对方就理应欢喜。  
+  
+爱不在于数额，爱可以轻如鸿毛，因为它只在于不求回报。  
+
+——[《想法》](https://www.zhihu.com/pin/1182455637795061760)
+
+  
+
+---
+
+  
+
+人终有一死，你所拥有的一切最终都要留给他人。
+
+吝啬在最终意义上是无意义的。
+
+——[《评论区》](https://www.zhihu.com/pin/1182455637795061760)
+
+
+
+---
+
+
+
 勇者的追求是重归平衡与共处，弱者的追求是抄家灭门、斩草除根、“永绝后患”。
 
 前者可敬可佩，后者可悲可怜。
