--- a/诅咒苦难.md
+++ b/诅咒苦难.md
@@ -2,42 +2,84 @@
 [为什么说“赞美苦难”是最阴险歹毒的“正能量”?](https://www.zhihu.com/question/516832110/answer/2533182188)
 
 > Author: #Anonymity 
-Last update: *17/06/2022* 
-Links: [[苦难的价值]] [[苦难与上帝]] [[生而贫穷]] [[仇穷与仇富]] [[真正的恶]] [[自弃]]
+Last update: *25/06/2022* 
+Links: [[苦难的价值]] [[苦难的价值]] [[苦难与上帝]] [[生而贫穷]] [[仇穷与仇富]] [[真正的恶]] [[自弃]]
 Tags: 
 
 随你说得多么天花乱坠，如果你对苦难只有怨恨和回避，**你将注定是个无能之辈**。
 
 而凡要远行之人，都会避免与你为伴。谁想在不可避免的苦难降临时和只会哭泣抱怨上天不公的人为伍？
 
-多大的政治正确也救不了你。
+多大的[政治正确](https://www.zhihu.com/search?q=%E6%94%BF%E6%B2%BB%E6%AD%A3%E7%A1%AE&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A2533182188%7D)也救不了你。
 
 要论证“赞美苦难”是多么“邪恶”，这没人拦得住你。
 
 但这丝毫影响不了苦难是否降临——它必然降临。你要怪，就怪人的寿命太长，现在医疗条件太好。
 
-它**必然**来临。
+何以见得苦难必然到来？难道我就不可能锦衣玉食、终身无忧吗？
 
-不但如此，那些诅咒苦难的人，总是对苦难最敏感的弱不经风的人，以至于太阳大点、风冷一点都要成为苦难。
+对，你不能。
 
-**苦难对ta们来得更快，更必然。**
+你难道以为苦难只是比较倒霉的人、比较[贫穷](https://www.zhihu.com/search?q=%E8%B4%AB%E7%A9%B7&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A2533182188%7D)、比较病弱的人的事？是有人制造才会有，没人制造就不会有的事？
+
+大错特错。
 
   
+
+要么就是人人生畏的苦难直接掉在你身上，于是你经受苦难。
+
+要么就是你自己长期锦衣玉食温室花朵导致[弱不经风](https://www.zhihu.com/search?q=%E5%BC%B1%E4%B8%8D%E7%BB%8F%E9%A3%8E&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A2533182188%7D)，最后一阵微风吹在你身上，给你造成体感完全相同、同样痛不欲生的折磨。
+
+你从小没有缺过钱，一生从不得病，你只会因此获得一根更低的苦难[判断线](https://www.zhihu.com/search?q=%E5%88%A4%E6%96%AD%E7%BA%BF&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A2533182188%7D)，搞出“没有游戏玩”的苦难，“爸爸不夸我”的苦难。苦难照样笼罩你，你照样想死，只不过别人可能是因为[四肢瘫痪](https://www.zhihu.com/search?q=%E5%9B%9B%E8%82%A2%E7%98%AB%E7%97%AA&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A2533182188%7D)，你可能是因为游戏删号或者被爹妈怒斥。
+
+苦难感没有什么本质区别，你一样死去活来——只是造成人家死去活来的是刀山火海，造成你死去活来的是一阵微风。
+
+[情感折磨](https://www.zhihu.com/search?q=%E6%83%85%E6%84%9F%E6%8A%98%E7%A3%A8&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A2533182188%7D)同样冲击你的极限，区别在于，**世上刀山火海不常有，微风却从不会停止**。
+
+**你无处可逃**。
+
+把“歌颂苦难”的人套上“最阴险歹毒”的罪名，**你照样无处可逃**。
+
+---
 
 苦难只会奖励在它面前保持兴奋和积极的人。
 
-你的不兴奋和不积极有多充分和“正义”的理由，对它来说没有任何意义。**总之你不能保持兴奋、不能保持积极，它就埋葬你。**
+你的不兴奋和不积极有多充分和“[正义](https://www.zhihu.com/search?q=%E6%AD%A3%E4%B9%89&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A2533182188%7D)”的理由，对它来说没有任何意义。**总之你不能保持兴奋、不能保持积极，它就埋葬你。**
 
 就这么直白。
 
-继续寻找更多理由，看这些理由到时候对你有什么用吧。
+有的人上厕所看到多年没骑马乃至于腿上长肥肉，悲叹自己安于逸乐。
 
-  
-
-有的人上厕所看到多年骑马乃至于腿上长肥肉，悲叹自己安于逸乐。
-
-有的人没有蜂蜜水喝，悲愤控诉“我何至于此”，要吐血，要死。
+有的人没有[蜂蜜水](https://www.zhihu.com/search?q=%E8%9C%82%E8%9C%9C%E6%B0%B4&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A2533182188%7D)喝，悲愤控诉“我何至于此”，要吐血，要死。
 
 两条路，你自己选。
 
+---
+
+苦难有什么意义？
+
+苦难是一种无可替代的对人的淬炼，它能完成对人的[钢化](https://www.zhihu.com/search?q=%E9%92%A2%E5%8C%96&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A2533182188%7D)。
+
+这东西是成为社会中坚、砥柱绝对必要的资格。
+
+没亲眼见过，没亲身经过，用任何模拟教育、任何讲述都无法替代。
+
+[天降苦难](https://www.zhihu.com/search?q=%E5%A4%A9%E9%99%8D%E8%8B%A6%E9%9A%BE&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A2533182188%7D)给你，是给了你一个钢化成人的机会，一种资格。
+
+再说一遍——天没给你这份磨练，你根本没有变得更“幸运”一些，**你该受的痛苦只会以让你的[痛感神经](https://www.zhihu.com/search?q=%E7%97%9B%E6%84%9F%E7%A5%9E%E7%BB%8F&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A2533182188%7D)变得敏感的方式来兑现，你别想逃掉**。
+
+没经过苦难的人的同情因为只是出于对[痛苦](https://www.zhihu.com/search?q=%E7%97%9B%E8%8B%A6&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A2533182188%7D)的想象，虽然自己没觉得不出自真心，但实际上却没有真正能让人安宁的力量。搞得多了，还会因为没有实际效力但却占用了大量的精力，令人加倍的焦虑和绝望。
+
+**诅咒苦难的人，永远在指责主张坚强的人残忍。**
+
+那么当苦难到来——它**必然**会到来——没有坚强的铠甲可傍身的人可不可怜？
+
+这样的人说话好听，但是在将来的寒冬里ta对你有何用？
+
+Winter is coming, for EVERYONE.
+
+你到时候自然会知道你曾经经历的苦难有什么意义，值不值得歌颂。
+
   
+
+[该以怎样的心态面对让人觉得浪费生命又不得不做的事情？1181 赞同 · 167 评论回答](https://www.zhihu.com/question/457093118/answer/1861315517)
