--- a/Anonymity/01 - 家族答集/公权力.md
+++ b/Anonymity/01 - 家族答集/公权力.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity 
 Last update: *16/08/2021* 
-Links: [[反欺凌]] [[朋友难交]] [[网暴]]  [[逃避伤害]] [[Anonymity/01 - 家族答集/纠缠不休]] [[安全感]] [[Anonymity/01 - 家族答集/送你一句话]] [[爱]] [[对人类失望]] [[悲观与乐观]] [[敌人]] [[以爱应恨]] [[烦躁]]
+Links: [[反欺凌]] [[朋友难交]] [[网暴]]  [[逃避伤害]] [[Anonymity/01 - 家族答集/纠缠不休]] [[安全感]] [[一句话]] [[爱]] [[对人类失望]] [[悲观与乐观]] [[敌人]] [[以爱应恨]] [[烦躁]]
 Tags:  #方法实践SOP   
   
 
