--- a/Anonymity/01 - 家族答集/别愤怒.md
+++ b/Anonymity/01 - 家族答集/别愤怒.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity 
 Last update: *16/04/2022* 
-Links: [[原谅]] [[爱]] [[Anonymity/01 - 家族答集/温柔]] [[Anonymity/01 - 家族答集/送你一句话]] [[休息]] [[烦躁]] [[FURY]]
+Links: [[原谅]] [[爱]] [[Anonymity/01 - 家族答集/温柔]] [[一句话]] [[休息]] [[烦躁]] [[FURY]]
 Tags: #爱Caritas 
 
 其实我大概知道你为什么愤怒。
