--- a/Anonymity/01 - 家族答集/制赌.md
+++ b/Anonymity/01 - 家族答集/制赌.md
@@ -1,5 +1,5 @@
 # 制赌
-*如何根除赌瘾？*
+[如何根除赌瘾？](https://www.zhihu.com/question/308289812/answer/1817707442)
 
 > Author: #Anonymity
 Last update: *23/07/2021* 
