--- a/Anonymity/01 - 家族答集/厉害思维.md
+++ b/Anonymity/01 - 家族答集/厉害思维.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity
 Last update: *14/07/2021* 
-Links: [[学习的快乐]] [[聪明的笨功夫]] [[保持单纯]] [[不抱怨]] [[悲观与乐观]] [[FURY]] [[Sin]] [[Anonymity/01 - 家族答集/送你一句话]]
+Links: [[学习的快乐]] [[聪明的笨功夫]] [[保持单纯]] [[不抱怨]] [[悲观与乐观]] [[FURY]] [[Sin]] [[一句话]]
 Tags: 
 
  
