--- a/Anonymity/01 - 家族答集/父母恩.md
+++ b/Anonymity/01 - 家族答集/父母恩.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity 
 Last update: *06/06/2022* 
-Links: [[基线]] [[期望]] [[亲子冲突]] [[永远忐忑]] [[服从]] [[冷漠]] [[不抱怨]] [[重感情]]
+Links: [[基线]] [[期望]] [[亲子冲突]] [[永远忐忑]] [[服从]] [[Anonymity/01 - 家族答集/冷漠]] [[不抱怨]] [[重感情]]
 Tags: 
 
 这个账是这么算的——
