--- a/Anonymity/04 - 社科答集/房价崩溃.md
+++ b/Anonymity/04 - 社科答集/房价崩溃.md
@@ -1,5 +1,5 @@
-# 房价崩盘
-*房价崩盘后会发生什么?*
+# 房价崩溃
+[房价崩盘后会发生什么？]( https://www.zhihu.com/question/279514129/answer/477712733)
 
 > Author: #Anonymity
 Last update: *23/07/2021* 
