--- a/Anonymity/04 - 社科答集/抑郁的潮.md
+++ b/Anonymity/04 - 社科答集/抑郁的潮.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity
 Last update: *23/07/2021* 
-Links: [[Anonymity/01 - 家族答集/战胜抑郁]] [[悲观与乐观]] [[Anonymity/01 - 家族答集/送你一句话]]
+Links: [[Anonymity/01 - 家族答集/战胜抑郁]] [[悲观与乐观]] [[一句话]]
 Tags:   
  
 1987-1990年，是中国的生育高峰。
