--- a/Anonymity/07 - 军事技术与艺术/战略轰炸机.md
+++ b/Anonymity/07 - 军事技术与艺术/战略轰炸机.md
@@ -1,5 +1,5 @@
 # 战略轰炸机
-*为什么轰6在伊拉克和埃及都那么早退役了，而中国还将它作为主力轰炸机？*
+[为什么轰6在伊拉克和埃及都那么早退役了，而中国还将它作为主力轰炸机？](https://www.zhihu.com/question/341373537/answer/855221005)
 
 > Author: #Anonymity
 Last update: *23/07/2021* 
