--- a/Anonymity/07 - 军事技术与艺术/无人舰.md
+++ b/Anonymity/07 - 军事技术与艺术/无人舰.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity 
 Last update: *30/09/2021* 
-Links: [[军舰对潜艇]] [[巡洋舰]] [[现代驱逐舰]] [[航空母舰]]
+Links: [[军舰对潜艇]] [[巡洋舰]] [[舰炮]] [[航空母舰]]
 Tags:
 
 无人舰队的关键要害，不在于“无人”，而在于**人工智能的健全程度**。
