--- a/Anonymity/08 - 文艺答集/米其林.md
+++ b/Anonymity/08 - 文艺答集/米其林.md
@@ -1,29 +1,27 @@
 # 米其林
-*米其林（Michelin）是否有资格评判中国菜?*
+[米其林（Michelin）是否有资格评判中国菜？](https://www.zhihu.com/question/296407080/answer/503724788)
 
 > Author: #Anonymity
-Last update: *23/07/2021* 
+Last update: *24/06/2022* 
 Links: [[历史必然]] [[王天下]]
 Tags:   
 
- 
-说句实话，中餐的确欠缺礼仪化和现代化。米其林评价低并不奇怪。
 
-现代餐饮体系里“好吃”“适口”已经并不是最主要的评价标准了。好的餐饮体验里包含了大量的文化体验。要有利于长时间社交、有利于健康，很多点都是需要重新设计的。中餐的注意力几乎全在口腔里，而并不在用餐过程上——上菜一窝蜂摆齐，先等“菜齐”，然后一齐“入席”，干一杯一齐“开动”，推杯换盏之后杯盘狼藉。这些问题靠“好吃”是找补不回来的。
+说句实话，现在的大众中餐的确欠缺礼仪化和[现代化](https://www.zhihu.com/search?q=%E7%8E%B0%E4%BB%A3%E5%8C%96&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A503724788%7D)。米其林评价低并不奇怪。
+
+现代餐饮体系里“好吃”“适口”已经并不是最主要的评价标准了。好的餐饮体验里包含了大量的文化体验。要有利于长时间[社交](https://www.zhihu.com/search?q=%E7%A4%BE%E4%BA%A4&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A503724788%7D)、有利于健康，很多点都是需要重新设计的。中餐的注意力几乎全在口腔里，而并不在用餐过程上——上菜一窝蜂摆齐，先等“菜齐”，然后一齐“入席”，干一杯一齐“开动”，推杯换盏之后杯盘狼藉。这些问题靠“好吃”是找补不回来的。
 
   
 
+米其林的观点是“在食物的陪伴下愉快的时光”。**要害在于时光，而非食物**。美所、美器、美仪态、美人儿，然后才有所谓美食。为了顶尖的美好，[上菜](https://www.zhihu.com/search?q=%E4%B8%8A%E8%8F%9C&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A503724788%7D)必然是一道一道单独上，每一道都要正在火候上上，正在火候上专心吃，这才能不辜负每一道菜。厨师排菜也深入考虑了人的[起承转合](https://www.zhihu.com/search?q=%E8%B5%B7%E6%89%BF%E8%BD%AC%E5%90%88&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A503724788%7D)，胃口的挑起、舒缓、满足、留恋。菜的分量也要充分考量——要让你吃上两个小时却不胀腹。
 
-米其林的观点是“在食物的陪伴下愉快的时光”。要害在于时光，而非食物。美所、美器、美仪态、美人儿，然后才有所谓美食。为了顶尖的美好，上菜必然是一道一道单独上，每一道都要正在火候上上，正在火候上专心吃，这才能不辜负每一道菜。厨师排菜也深入考虑了人的起承转合，胃口的挑起、舒缓、满足、留恋。菜的分量也要充分考量——要让你吃上两个小时却不胀腹。这两个小时里，食客要无条件的在侍席的引导下把自己交付在厨师的设计里。无条件投降，放弃自己的一切执着。你不能来个“我想吃辣的给我做点辣的”，“我好饿给我来点能饱肚子的”，而是几乎要舍弃“点菜”权。只有彻底“投降”，才能吃到“我”以外的东西，才能有新体验，才能达成与美食制作者的真正交流。上面这些通相加，这才谈得上“用餐体验”。这个用餐体验势必要求食客、厨师、侍席默然于心的合作。这些东西，目前的中餐统统欠奉。即使是所谓“高端中餐”也罢，始终不敢挑战食客们指向饥饿感的餐饮习惯。高端食客也往往不过是“有钱的饿汉”。上桌之前对厨师如使仆役，稍不顺心就拍桌而走。中餐厨师是在给一群根本不知美食为何物的人做奴隶，做胃口填充机。只有仗着“传统配方”“得奖大厨”的招牌才敢有一点战战兢兢的观点，而且在暴君般的、义和团式的食客群面前根本不敢坚持。主客伦理如此，哪有“美食”？
+这两个小时里，食客要无条件的在侍席的引导下把自己交付在厨师的设计里。无条件投降，放弃自己的一切执着。你不能来个“我想吃辣的给我做点辣的”，“我好饿给我来点能饱肚子的”，而是几乎要舍弃“点菜”权。只有彻底“投降”，才能吃到“我”以外的东西，才能有新体验，才能达成与美食制作者的真正交流。上面这些通相加，这才谈得上“用餐体验”。这个用餐体验势必要求食客、厨师、侍席默然于心的合作。这些东西，目前的中餐统统欠奉。即使是所谓“高端中餐”也罢，始终不敢挑战食客们指向饥饿感的餐饮习惯。高端食客也往往不过是“有钱的饿汉”。
+
+上桌之前对厨师如使仆役，稍不顺心就拍桌而走。中餐厨师是在给一群根本不知美食为何物的人做[奴隶](https://www.zhihu.com/search?q=%E5%A5%B4%E9%9A%B6&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A503724788%7D)，做胃口填充机。只有仗着“传统配方”“得奖大厨”的招牌才敢有一点战战兢兢的观点，而且在暴君般的、义和团式的食客群面前根本不敢坚持。[主客伦理](https://www.zhihu.com/search?q=%E4%B8%BB%E5%AE%A2%E4%BC%A6%E7%90%86&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A503724788%7D)如此，哪有“美食”？
 
 没有君子，不养艺人，古今同理。
 
-只能说希望中餐慢慢能有有勇有谋之士站在这丰富遗产的肩膀上把“钟鸣鼎食”的中式宴会体验真正复兴起来。现在满清式的愚昧餐饮文化是不配担当这个历史责任的。
+只能说希望中餐慢慢能有有勇有谋之士站在这丰富遗产的肩膀上把“钟鸣鼎食”的中式宴会体验真正复兴起来。
 
-  
-
-
-不怪米其林，是自己不行。
-
-
+现在[满清](https://www.zhihu.com/search?q=%E6%BB%A1%E6%B8%85&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A503724788%7D)式的愚昧餐饮文化是不配担当这个历史责任的。
 
