--- a/Anonymity/11 - 新冠/伊于胡底.md
+++ b/Anonymity/11 - 新冠/伊于胡底.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity 
 Last update: *12/08/2021* 
-Links: [[下一轮]] [[气候异常时代]] [[所谓大战略家]] [[进化王]] [[西方 & 东方]] [[非洲、非洲]] [[Anonymity/04 - 社科答集/终极目标]] [[民主专制]] [[民主民粹]] [[Anonymity/04 - 社科答集/左转右转]] [[普世价值]] [[中药]] [[身病心病]] [[帮邻抗疫]] [[感染途径]]  [[日本抗疫]] [[爱心肉]] [[病毒来源]] [[病毒传播途径]] [[完美传染病]] [[美医院船]] [[规范求助]] [[钉钉]] [[限制入境]] [[香油防疫]] 
+Links: [[下一轮]] [[气候异常时代]] [[所谓大战略家]] [[进化王]] [[西方 & 东方]] [[非洲、非洲]] [[Anonymity/04 - 社科答集/终极目标]] [[Anonymity/04 - 社科答集/民主专制]] [[民主民粹]] [[Anonymity/04 - 社科答集/左转右转]] [[普世价值]] [[中药]] [[身病心病]] [[帮邻抗疫]] [[感染途径]]  [[日本抗疫]] [[爱心肉]] [[病毒来源]] [[病毒传播途径]] [[完美传染病]] [[美医院船]] [[规范求助]] [[钉钉]] [[限制入境]] [[香油防疫]] 
 Tags:       
 
 
