--- a/如何评价越南第二代领导人黎笋？.md
+++ b/如何评价越南第二代领导人黎笋？.md
@@ -3,7 +3,7 @@
 > Author: #Anonymity 
 Last update: *11/07/2022* 
 Links: [[2021 - 越南风险]] [[越南天花板]]
-Tags: 
+Tags:  #待命名TBN 
 
 客观讲，站在越南的立场上，如果[黎笋](https://www.zhihu.com/search?q=%E9%BB%8E%E7%AC%8B&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A2556942926%7D)没有来这么一出，以越南的文化经济之单薄，即使有远在万里之外的[苏联](https://www.zhihu.com/search?q=%E8%8B%8F%E8%81%94&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A2556942926%7D)的平衡，越南的知华、亲华派也很可能彻底掌握越南政权，越南人现在估计人人会说汉语。
 
