--- a/成绩优异，没钱留学只能保国内研究生，而成绩比我差的申到国外好学校，心里难受怎么办？.md
+++ b/成绩优异，没钱留学只能保国内研究生，而成绩比我差的申到国外好学校，心里难受怎么办？.md
@@ -3,7 +3,7 @@
 > Author: #Anonymity 
 Last update: *11/07/2022* 
 Links: [[工程师路线]]
-Tags: 
+Tags:  #待命名TBN 
 
 虽然我对LSE也没啥[感冒](https://www.zhihu.com/search?q=%E6%84%9F%E5%86%92&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A2556961227%7D)的，但是你能拿到LSE的录取通知，以此为依据，完全可以由父母担保向亲戚朋友乃至金融机构贷到必要的款项啊。
 
