--- a/台积电表示：未计划在 9 月 14 日之后给华为继续供货，你怎么看？会产生什么影响？.md
+++ b/台积电表示：未计划在 9 月 14 日之后给华为继续供货，你怎么看？会产生什么影响？.md
@@ -3,6 +3,6 @@
 > Author: #Anonymity 
 Last update: *11/07/2022* 
 Links: [[学好语文]]
-Tags: 
+Tags:  #待命名TBN 
 
 “[未计划供货](https://www.zhihu.com/search?q=%E6%9C%AA%E8%AE%A1%E5%88%92%E4%BE%9B%E8%B4%A7&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A1350180023%7D)”和“计划不供货”是有区别的。
