--- a/Anonymity/01 - 家族答集/对事不对人.md
+++ b/Anonymity/01 - 家族答集/对事不对人.md
@@ -1,5 +1,5 @@
 # 对事不对人
-*怎样才能做到「对事不对人」？*
+[怎样才能做到「对事不对人」？](https://www.zhihu.com/question/21062014/answer/1011783718)
 
 > Author: #Anonymity
 > Last update: *23/07/2021* 
