--- a/摘抄本/比喻摘录.md
+++ b/摘抄本/比喻摘录.md
@@ -771,3 +771,9 @@ ta们嘴上说的是政治，其实喊的是寂寞而已。
   
 
 你是需要保持别人的信心来过日子的。
+
+——今日头条——
+
+会把“抱起团来靠暴力威胁来不准别人自私”称为“集体主义”的人，其实既不知道什么叫集体，也不清楚什么叫主义，而只是往衣服夹层里塞旧报纸取暖的苦人罢了。嘴都冻得乌青，怎么和你谈论今日头条？
+
+——
