--- a/Anonymity/01 - 家族答集/取名 - 牛姓.md
+++ b/Anonymity/01 - 家族答集/取名 - 牛姓.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity 
 > Last update: *23/07/2021* 
-> Links:[[取名]] [[取名 - 赵姓]]
+> Links:[[Anonymity/01 - 家族答集/取名]] [[取名 - 赵姓]]
 > Tags: 
 
  
