--- a/摘抄本/句子摘录.md
+++ b/摘抄本/句子摘录.md
@@ -5,6 +5,53 @@
 > Links:
 > Tags: 
 
+把一切外来作用都转化为正面推动的人，无论家庭给ta什么影响，都是正面影响。
+
+  
+自己从不做这种转化和管理，认定“影响”本身就已经有好坏，等着“好影响”，埋怨“坏影响”，觉得别人有成就是因为很幸运有足够好影响，自己不行是因为自己不幸遇到全是坏影响的人，自带坏影响诅咒。
+
+几乎什么影响落到ta身上都是坏影响。
+
+——[《一切都对》](https://www.zhihu.com/question/29759221/answer/2601505639)
+
+---
+
+你有什么程度的愤怒，你就应该有什么程度的勇敢。
+
+有什么程度勇敢，就该有什么程度的行动。
+
+有什么样的行动，就应该有什么样的尝试。
+
+就该有应有的失败。
+
+——[《no run》](https://www.zhihu.com/question/541030715/answer/2555888987)
+
+---
+
+成败利钝在所不计，生死荣辱置之度外。一条路，走到它亮。
+
+  
+事情永远是由无侥幸的人来决定结局，而不是那些看风向紧就跑、看势头旺就来的人。只有这些人，是竖旗、立寨、开山的人，是提供港湾和归宿的人。那些一天到晚提心吊胆考虑有利不利，run向何方的的人，是流浪的、敲门的、乞讨的——注定一生悬命，无枝可依。
+
+爱是永不止息——永不止息的盼望和期望，而弃绝失望。
+
+——[《关于失望》](https://zhuanlan.zhihu.com/p/549210717)
+
+---
+
+自强不息。自强不息，勇猛精进，日有所得。
+
+这是一个万变不离其宗的人生原则。这个原则本身就可辟百邪。
+
+——[《最完美的复仇》](https://www.zhihu.com/question/24579627/answer/2571651368)
+
+---
+
+你在意谁的喜与厌，就是把谁作为了雕琢你自己的刀匠。
+
+——[《在意讨厌》](https://www.zhihu.com/question/480980081/answer/2090195429)
+
+---
 
 浪费生命有三个定义。
 
