--- a/Anonymity/01 - 家族答集/世界史.md
+++ b/Anonymity/01 - 家族答集/世界史.md
@@ -5,7 +5,7 @@
 > Last update: *23/07/2021* 
 > Links:[[能力]] [[学好语文]] [[学习哲学 - 之一]] [[学习的快乐]] [[爱的痛苦]] [[财富观]] [[学习的快乐]] [[爱]] [[滚滚向前]] [[祷告观]] [[三面围堵]] [[敢画]] [[致读者 - I]]
 > Tags:   
-> 沙海拾金:  [[狂妄.jpg]] [[狂妄1.JPG]] [[人类共性1.jpeg]] [[人类共性.jpeg]] [[人类共性2]] [[人类共性3.jpg]] [[求知1.jpeg]] [[“比较现实”.jpeg]] [[傲慢的界限.PNG]] 
+> 沙海拾金:  [[狂妄.jpg]] [[狂妄1.JPG]] [[人类共性1.jpeg]] [[人类共性.jpeg]] [[人类共性2]] [[人类共性3.jpg]] [[“比较现实”.jpeg]] [[傲慢的界限.PNG]] 
 
 
 学习世界史对孩子而言是**第一重要**的课程。
