--- a/Anonymity/07 - 军事技术与艺术/致命危机.md
+++ b/Anonymity/07 - 军事技术与艺术/致命危机.md
@@ -1,10 +1,9 @@
-# 致命危机
-*什么神奇的事件会使发达国家和发展中国家灭亡或重创反而极度落后的小国家没什么影响?*
+[什么神奇的事件会使发达国家和发展中国家灭亡或重创反而极度落后的小国家没什么影响？](https://www.zhihu.com/question/407386329/answer/1365761532)
 
 > Author: #Anonymity
 > Last update: *23/07/2021* 
 > Links:[[进化王]] [[危险迹象]] [[非常之“非常”]]
-> Tags:
+> Tags: #待命名TBN 
 
  
 EMP弹导致的电子设备大规模毁坏。
