--- a/Anonymity/08 - 文艺答集/商人.md
+++ b/Anonymity/08 - 文艺答集/商人.md
@@ -1,9 +1,9 @@
 # 商人
-*中国古代为什么要抑商，他们不知道把土地分给三分之一的人，其他人从事工商业这样对国家好处更大吗?*
+[中国古代为什么要抑商，他们不知道把土地分给三分之一的人，其他人从事工商业这样对国家好处更大吗?](https://www.zhihu.com/question/407632959/answer/1348786071)*
 
 > Author: #Anonymity
 > Last update: *23/07/2021* 
-> Links:
+> Links: [[世界史]] [[了解历史]]
 > Tags:    
 
 
